@@ -100,11 +100,19 @@ Bool VG_(has_gdbserver_breakpoint) (Addr addr);
 extern void VG_(invoke_gdbserver) ( int check );
 
 // To be called by core (m_signals.c) before delivering a signal.
-// Returns True unless gdb user asks to not pass the signal to the client.
+// Returns False if gdb user asks to not pass the signal to the client.
+// Returns True if signal must be passed to the client, either because
+// no gdb is connected, or gdb instructs to pass the signal.
 // Note that if the below returns True, the signal might
 // still be ignored if this is the action desired by the
 // guest program.
-extern Bool VG_(gdbserver_report_signal) (Int signo, ThreadId tid);
+extern Bool VG_(gdbserver_report_signal) (Int vki_signo, ThreadId tid);
+
+// If no gdb is connected yet, wait for a gdb to connect and report
+// this (supposedly) fatal signal.
+// If a gdb is already connected, this does nothing (as normally 
+// the signal was already reported to the already connected gdb).
+extern void VG_(gdbserver_report_fatal_signal) (Int vki_signo, ThreadId tid);
 
 /* Entry point invoked by scheduler.c to execute the request 
    VALGRIND_CLIENT_MONITOR_COMMAND.
